# workstation-orchestrator

./: LICENSE  README.md  main.sh  pyproject.toml  pytest.ini
.cursor/rules/: python.mdc
.devcontainer/alpine/: devcontainer.json
.devcontainer/debian/: devcontainer.json
.devcontainer/fedora/: devcontainer.json
.devcontainer/windows/: devcontainer.json
examples/: config.yaml  example_file.yaml
scripts/: methods.sh
src/workstation_orchestrator/: main.py  requirements.txt
src/workstation_orchestrator/helpers/: helper.py  install_managers.py  package_manager_utils.py  subprocess_helper.py
src/workstation_orchestrator/logger/: logger.py
src/workstation_orchestrator/models/: base_model.py  config.py  config_processor.py  shared.py  shared_main.py
src/workstation_orchestrator/models/base/: command.py  git.py  install.py  os.py  os_type.py  output_store.py  package_manager.py  prepare.py  resources.py  software.py
src/workstation_orchestrator/models/configure/: config.py  visual_studio.py  vscode.py
src/workstation_orchestrator/models/os/: linux.py  mac.py  windows.py
src/workstation_orchestrator/modules/: processor.py
src/workstation_orchestrator/modules/command/: command.py
src/workstation_orchestrator/modules/configure/: configure.py  visual_studio.py  vscode.py
tests/: conftest.py
tests/configs/: config.yaml  config_team.yaml  config_team_linux.yaml  output_store_play.yaml
tests/helpers/: test_helper.py  test_subprocess_helper.py
tests/models/: test_command_models.py
tests/modules/command/: test_command_module.py
(+10 files in other folders)
